rename /index route and extend it to process list of speeches
